--- a/index.html
+++ b/index.html
@@ -56,11 +56,25 @@
             </div>
         </div>
     </nav>
-
-
-        <!--  -->
     
     <!--End navbar-->
+
+    <!--Start header-->
+    <section class="header" id="home">
+        <div class="overlay"></div>
+        <div class="container">
+            <div class="container">
+                <div class="info">
+                    <span>new tour</span>
+                    <h2>rock on</h2>
+                    <p>jungle band will sing jungle</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nesciunt et provident veniam<br>laboriosam qui doloribus eos rerum molestias. Alias obcaecati nihil.</p>
+                    <button class="main-btn">join the tour</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--End header-->
 
     
     <script src="js/jquery-3.4.1.min.js"></script>
