--- a/index.html
+++ b/index.html
@@ -76,7 +76,80 @@
     </section>
     <!--End header-->
 
+    <!-- Start Tours -->
+    <div class="tours">
+        <div class="container">
+            <div class="heading">
+                <h2>upcoming tour</h2>
+                <img src="images/head.png"/>
+                <p>rise your emition & wishes to expend pleasure time with us</p>
+            </div>
+            <div class="row">
+                <div class="info">
+                    <div class="row">
+                        <div class="circle">
+                            <div class="con">
+                                <p>13 apr <br> <span>2018</span> </p>
+                            </div>
+                        </div>
+                        <div class="details">
+                            <p>coachella music festival</p>
+                            <span><i class="fas fa-map-marker-alt"></i> indio,california,U.S.A</span>
+                            <span><i class="far fa-clock"></i> April 13-22,2018</span>
+                            <button class="main-btn">buy ticket</button>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="circle">
+                            <div class="con">
+                                <p>13 apr <br> <span>2018</span> </p>
+                            </div>
+                        </div>
+                        <div class="details">
+                            <p>coachella music festival</p>
+                            <span><i class="fas fa-map-marker-alt"></i> indio,california,U.S.A</span>
+                            <span><i class="far fa-clock"></i> April 13-22,2018</span>
+                            <button class="main-btn">buy ticket</button>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="circle">
+                            <div class="con">
+                                <p>13 apr <br> <span>2018</span> </p>
+                            </div>
+                        </div>
+                        <div class="details">
+                            <p>coachella music festival</p>
+                            <span><i class="fas fa-map-marker-alt"></i> indio,california,U.S.A</span>
+                            <span><i class="far fa-clock"></i> April 13-22,2018</span>
+                            <button class="main-btn">buy ticket</button>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="circle">
+                            <div class="con">
+                                <p>13 apr <br> <span>2018</span> </p>
+                            </div>
+                        </div>
+                        <div class="details">
+                            <p>coachella music festival</p>
+                            <span><i class="fas fa-map-marker-alt"></i> indio,california,U.S.A</span>
+                            <span><i class="far fa-clock"></i> April 13-22,2018</span>
+                            <button class="main-btn">buy ticket</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="image">
+                    <img src="./images/10.jpg" alt="">
+                </div>
+            </div>
+            <button class="main-btn m-auto">view more tour</button>
+        </div>
+    </div>
+    <!-- End Tours -->
     
+
+
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.nicescroll.min.js"></script>
