Section FEATURED MUSIC

--- a/index.html
+++ b/index.html
@@ -148,7 +148,270 @@
     </div>
     <!-- End Tours -->
     
+    <!-- Start Music -->
+    <section class="music">
+        <div class="container">
+            <div class="heading">
+                <h2>featured music</h2>
+                <img src="images/head.png"/>
+                <p>rise your emition & wishes to expend pleasure time with us</p>
+            </div>
+            <div class="btns">
+                <button class="main-btn active-btn">video</button>
+                <button class="main-btn">audio</button>
+                <button class="main-btn">albom</button>
+            </div>
+            <div class="row">
+                <div class="image">
+                    <div class="name">sia</div>
+                </div>
+                <div class="songs">
+                    <div class="sound">
+                        <audio id="player-1" src="./audio/Genius.mp3"></audio>
+                        <div class="row">
+                            <div class="item">01 . Genius</div>
+                            <div class="item">3.33 Min<i class="fab fa-creative-commons-sampling"></i></div>
+                            <div class="item controls">
+                                <button onclick="document-getElementById('player-1').play()">
+                                    <i class="fas fa-play"></i>
+                                </button> 
+                                <button onclick="document-getElementById('player-1').pause()">
+                                    <i class="fas fa-pause"></i>
+                                </button> 
+                                <button onclick="document.getElementById('player-1').volume += 0.1">
+                                    <i class="fas fa-plus"></i>
+                                </button> 
+                                <button onclick="document.getElementById('player-1').volume -= 0.1">
+                                    <i class="fas fa-minus"></i>
+                                </button> 
+                            </div>
+                        </div>
+                    </div>
+                    <div class="sound">
+                        <audio id="player-2" src="audio/Genius.mp3"></audio>
+                        <div class="row">
+                            <div class="item">02 . I am still here</div>
+                            <div class="item">4.30 Min<i class="fab fa-creative-commons-sampling"></i></div>
+                            <div class="controls item">
+                                <button onclick="document.getElementById('player-2').play()">
+                                    <i class="fas fa-play"></i>
+                                </button> 
+                                <button onclick="document.getElementById('player-2').pause()">
+                                    <i class="fas fa-pause"></i>
+                                </button> 
+                                <button onclick="document.getElementById('player-2').volume += 0.1">
+                                    <i class="fas fa-plus"></i>
+                                </button> 
+                                <button onclick="document.getElementById('player-2').volume -= 0.1">
+                                    <i class="fas fa-minus"></i>
+                                </button> 
+                            </div>
+                        </div>
+                    </div>
 
+                    <div class="sound">
+                        <audio id="player-3" src="audio/Genius.mp3"></audio>
+                        <div class="row">
+                            <div class="item">03 . unstopabble</div>
+                            <div class="item">3.45 Min<i class="fab fa-creative-commons-sampling"></i></div>
+                            <div class="controls item">
+                                <button onclick="document.getElementById('player-3').play()">
+                                    <i class="fas fa-play"></i>
+                                </button> 
+                                <button onclick="document.getElementById('player-3').pause()">
+                                    <i class="fas fa-pause"></i>
+                                </button> 
+                                <button onclick="document.getElementById('player-3').volume += 0.1">
+                                    <i class="fas fa-plus"></i>
+                                </button> 
+                                <button onclick="document.getElementById('player-3').volume -= 0.1">
+                                    <i class="fas fa-minus"></i>
+                                </button> 
+                            </div>
+                        </div>
+                    </div>
+                   
+                    <div class="sound">
+                        <audio id="player-4" src="audio/Genius.mp3"></audio>
+                        <div class="row">
+                            <div class="item">04 . Cheap Thrills</div>
+                            <div class="item">5.25 Min<i class="fab fa-creative-commons-sampling"></i></div>
+                            <div class="controls item">
+                                <button onclick="document.getElementById('player-4').play()">
+                                    <i class="fas fa-play"></i>
+                                </button> 
+                                <button onclick="document.getElementById('player-4').pause()">
+                                    <i class="fas fa-pause"></i>
+                                </button> 
+                                <button onclick="document.getElementById('player-4').volume += 0.1">
+                                    <i class="fas fa-plus"></i>
+                                </button> 
+                                <button onclick="document.getElementById('player-4').volume -= 0.1">
+                                    <i class="fas fa-minus"></i>
+                                </button> 
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="sound">
+                        <audio id="player-5" src="audio/Genius.mp3"></audio>
+                        <div class="row">
+                            <div class="item">05 . The Greatest</div>
+                            <div class="item">3.45 Min<i class="fab fa-creative-commons-sampling"></i></div>
+                            <div class="controls item">
+                                <button onclick="document.getElementById('player-5').play()">
+                                    <i class="fas fa-play"></i>
+                                </button> 
+                                <button onclick="document.getElementById('player-5').pause()">
+                                    <i class="fas fa-pause"></i>
+                                </button> 
+                                <button onclick="document.getElementById('player-5').volume += 0.1">
+                                    <i class="fas fa-plus"></i>
+                                </button> 
+                                <button onclick="document.getElementById('player-5').volume -= 0.1">
+                                    <i class="fas fa-minus"></i>
+                                </button> 
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="sound">
+                        <audio id="player-6" src="audio/Genius.mp3"></audio>
+                        <div class="row">
+                            <div class="item">06 . Helium</div>
+                            <div class="item">3.45 Min<i class="fab fa-creative-commons-sampling"></i></div>
+                            <div class="controls item">
+                                <button onclick="document.getElementById('player-6').play()">
+                                    <i class="fas fa-play"></i>
+                                </button> 
+                                <button onclick="document.getElementById('player-6').pause()">
+                                    <i class="fas fa-pause"></i>
+                                </button> 
+                                <button onclick="document.getElementById('player-6').volume += 0.1">
+                                    <i class="fas fa-plus"></i>
+                                </button> 
+                                <button onclick="document.getElementById('player-6').volume -= 0.1">
+                                    <i class="fas fa-minus"></i>
+                                </button> 
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="sound">
+                        <audio id="player-7" src="audio/Genius.mp3"></audio>
+                        <div class="row">
+                            <div class="item">07 . Bird Set Free</div>
+                            <div class="item">3.43 Min<i class="fab fa-creative-commons-sampling"></i></div>
+                            <div class="controls item">
+                                <button onclick="document.getElementById('player-7').play()">
+                                    <i class="fas fa-play"></i>
+                                </button> 
+                                <button onclick="document.getElementById('player-7').pause()">
+                                    <i class="fas fa-pause"></i>
+                                </button> 
+                                <button onclick="document.getElementById('player-7').volume += 0.1">
+                                    <i class="fas fa-plus"></i>
+                                </button> 
+                                <button onclick="document.getElementById('player-7').volume -= 0.1">
+                                    <i class="fas fa-minus"></i>
+                                </button> 
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="sound">
+                        <audio id="player-8" src="audio/Genius.mp3"></audio>
+                        <div class="row">
+                            <div class="item">08 . Never Give Up</div>
+                            <div class="item">3.24 Min<i class="fab fa-creative-commons-sampling"></i></div>
+                            <div class="controls item">
+                                <button onclick="document.getElementById('player-8').play()">
+                                    <i class="fas fa-play"></i>
+                                </button> 
+                                <button onclick="document.getElementById('player-8').pause()">
+                                    <i class="fas fa-pause"></i>
+                                </button> 
+                                <button onclick="document.getElementById('player-8').volume += 0.1">
+                                    <i class="fas fa-plus"></i>
+                                </button> 
+                                <button onclick="document.getElementById('player-8').volume -= 0.1">
+                                    <i class="fas fa-minus"></i>
+                                </button> 
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="sound">
+                        <audio id="player-9" src="audio/Genius.mp3"></audio>
+                        <div class="row">
+                            <div class="item">09 . Alive</div>
+                            <div class="item">4.35 Min<i class="fab fa-creative-commons-sampling"></i></div>
+                            <div class="controls item">
+                                <button onclick="document.getElementById('player-9').play()">
+                                    <i class="fas fa-play"></i>
+                                </button> 
+                                <button onclick="document.getElementById('player-9').pause()">
+                                    <i class="fas fa-pause"></i>
+                                </button> 
+                                <button onclick="document.getElementById('player-9').volume += 0.1">
+                                    <i class="fas fa-plus"></i>
+                                </button> 
+                                <button onclick="document.getElementById('player-9').volume -= 0.1">
+                                    <i class="fas fa-minus"></i>
+                                </button> 
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="sound">
+                        <audio id="player-10" src="audio/Genius.mp3"></audio>
+                        <div class="row">
+                            <div class="item">10 . Dusk Till Down</div>
+                            <div class="item">4.55 Min<i class="fab fa-creative-commons-sampling"></i></div>
+                            <div class="controls item">
+                                <button onclick="document.getElementById('player-10').play()">
+                                    <i class="fas fa-play"></i>
+                                </button> 
+                                <button onclick="document.getElementById('player-10').pause()">
+                                    <i class="fas fa-pause"></i>
+                                </button> 
+                                <button onclick="document.getElementById('player-10').volume += 0.1">
+                                    <i class="fas fa-plus"></i>
+                                </button> 
+                                <button onclick="document.getElementById('player-10').volume -= 0.1">
+                                    <i class="fas fa-minus"></i>
+                                </button> 
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="sound">
+                        <audio id="player-11" src="audio/Genius.mp3"></audio>
+                        <div class="row">
+                            <div class="item">11 . Chandelier</div>
+                            <div class="item">5.20 Min<i class="fab fa-creative-commons-sampling"></i></div>
+                            <div class="controls item">
+                                <button onclick="document.getElementById('player-11').play()">
+                                    <i class="fas fa-play"></i>
+                                </button> 
+                                <button onclick="document.getElementById('player-11').pause()">
+                                    <i class="fas fa-pause"></i>
+                                </button> 
+                                <button onclick="document.getElementById('player-11').volume += 0.1">
+                                    <i class="fas fa-plus"></i>
+                                </button> 
+                                <button onclick="document.getElementById('player-11').volume -= 0.1">
+                                    <i class="fas fa-minus"></i>
+                                </button> 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="main-btn m-auto view">view more audio</button>
+        </div>
+    </section>
+    <!-- End Music -->
 
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
