--- a/index.html
+++ b/index.html
@@ -413,6 +413,31 @@
     </section>
     <!-- End Music -->
 
+    <!-- Start Photos -->
+    <section class="photos">
+        <div class="heading">
+            <h2>best photo frame</h2>
+            <img src="images/head.png"/>
+            <p>rise your emition & wishes to expend pleasure time with us</p>
+        </div>
+        <div class="row">
+            <div class="box">
+                <img src="./images/03.jpg" style="height: 674px;" alt="">
+                <img src="./images/07.jpg" alt="">
+            </div>
+            <div class="box">
+                <img src="./images/04.jpg" alt="">
+                <img src="./images/09.jpg" alt="">
+            </div>
+            <div class="box">
+                <img src="./images/05.jpg" alt="">
+                <img src="./images/11.jpg" alt="">
+            </div>
+        </div>
+        <button class="main-btn m-auto view">view more photos</button>
+    </section>
+    <!-- End Photos -->
+
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.nicescroll.min.js"></script>
