--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <!--End header-->
 
     <!-- Start Tours -->
-    <div class="tours">
+    <div class="tours" id="tours">
         <div class="container">
             <div class="heading">
                 <h2>upcoming tour</h2>
@@ -149,7 +149,7 @@
     <!-- End Tours -->
     
     <!-- Start Music -->
-    <section class="music">
+    <section class="music" id="music">
         <div class="container">
             <div class="heading">
                 <h2>featured music</h2>
@@ -414,7 +414,7 @@
     <!-- End Music -->
 
     <!-- Start Photos -->
-    <section class="photos">
+    <section class="photos" id="gallary">
         <div class="heading">
             <h2>best photo frame</h2>
             <img src="images/head.png"/>
