--- a/index.html
+++ b/index.html
@@ -490,6 +490,20 @@
     </section>
     <!-- End Blogs -->
 
+    <!-- Start back  -->
+    <section class="back">
+        <div class="overlay">
+            <div class="info">
+                <h2>subscribe to the newsletter</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic illo aliquam delectus ratione eum, autem accusantium quas mollitia aut nisi quia, explicabo odio. Nesciunt.</p>
+                <form>
+                    <input type="email" placeholder="Your Email Addrss"/>
+                    <button type="submit" class="main-btn active-btn">subscribe now</button>
+                </form>
+            </div>
+        </div>
+    </section>
+    <!-- End back  -->
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.nicescroll.min.js"></script>
