--- a/index.html
+++ b/index.html
@@ -734,8 +734,8 @@
                </div>
             </div>
             <div class="footer">
-                <p>2020 &copy; <span>sing</span> music website. all right reserved</p>
-                <p>design & develop with <span>mounir mohamed</span></p>
+                <p>2022 &copy; <span>sing</span> music website. all right reserved</p>
+                <p>design & develop with <span>Mohammed Azzam</span></p>
             </div>
         </div>
     </section>
